feat: generate IDToken API
